--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "eject": "react-scripts eject",
         "serve": "serve -s build",
         "build-and-serve": "yarn run build && yarn run serve",
+        "dev": "webpack-dev-server --open"
     },
     "eslintConfig": {
         "extends": [
@@ -38,6 +39,9 @@
         ]
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-react": "^7.22.5",
+        "babel-loader": "^9.1.3",
         "eslint": "^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.0.0",
@@ -46,6 +50,11 @@
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "html-loader": "^4.2.0",
+        "prettier": "3.0.1",
+        "webpack": "^5.88.2",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     },
     "main": "index.js",
     "repository": "https://github.com/Jobs-Js/JJA.git"
