--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "prettier": "3.0.1",
         "webpack": "^5.88.2",
