--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@babel/core": "^7.22.10",
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-react": "^7.22.5",
+        "@svgr/webpack": "^8.1.0",
         "babel-loader": "^9.1.3",
         "eslint": "^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
