--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-rnd": "^10.4.1",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
@@ -58,6 +59,12 @@
         "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
+        "image-minimizer-webpack-plugin": "^3.8.3",
+        "imagemin": "^8.0.1",
+        "imagemin-gifsicle": "^7.0.0",
+        "imagemin-jpegtran": "^7.0.0",
+        "imagemin-optipng": "^8.0.0",
+        "imagemin-svgo": "^10.0.1",
         "prettier": "3.0.1",
         "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4",
