--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,11 @@
             { "runtime": "automatic", "importSource": "@emotion/react" }
         ]
     ],
-    "plugins": ["@emotion/babel-plugin"]
+    "plugins": [
+        "@emotion/babel-plugin",
+        [
+            "@babel/plugin-transform-react-jsx",
+            { "pragma": "jsx", "pragmaFrag": "Fragment" }
+        ]
+    ]
 }
