--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "jja",
     "version": "0.1.0",
     "private": true,
+    "homepage": ".",
     "dependencies": {
         "@emotion/babel-plugin": "^11.11.0",
         "@emotion/react": "^11.11.1",
